add project pictures, live icon and url, remove projects button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="icon" type="image/png" href="/public/react.svg" />
 
-    <title>Umar Farouq</title>
+    <title>Umar Farouq's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
